# shipsafe-naviguard

./: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.gemini/: settings.json
agent/: config.py  critic.py  evaluators.py  instrumentation.py  main.py  orchestrator.py  pending_actions.py  phoenix_mcp.py
agent/specialists/: dataset_builder.py  experiment_runner.py  model_monitor.py  regression_detector.py  root_cause_analyzer.py
api/: approval_store.py  main.py  models.py
cli/: main.py  package.json
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: ConfidenceTimeline.tsx  DatasetBrowser.tsx  ExperimentLog.tsx  RegressionHeatmap.tsx  SelfImprovementLoop.tsx
docs/: DEVPOST.md
fixtures/: hormuz_traces.json  seed_phoenix.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api.py  test_critic.py  test_dataset_builder.py  test_experiment_runner.py  test_model_monitor.py  test_orchestrator.py  test_regression_detector.py  test_root_cause_analyzer.py
