[project]
name = "naviguard"
version = "0.1.0"
description = "AI quality monitoring with self-improvement loops — powered by Arize Phoenix"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-adk>=1.32.0",
    "google-genai>=1.9.0",
    "openinference-instrumentation-google-adk>=0.1.11",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "arize-phoenix>=7.0",
    "arize-phoenix-otel>=0.8.0",
    "arize-phoenix-evals>=0.19.0",
    "arize-phoenix-client>=0.2.0",
    "litellm>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openinference-semantic-conventions>=0.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[project.scripts]
naviguard = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov=api --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "fixtures/*"]
